--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,6 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Dokdo');
+
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -15,4 +17,20 @@
 h1, h2, h3, h4, h5, h6 {
 	margin:0;
 	padding:0;
+}
+
+body {
+	background: image_url('bananas.png');
+	font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+}
+
+.navbar {
+	background: image_url('memphis-mini-dark');
+	box-shadow: 0px 1px 3px #2a2a2a;
+}
+
+.navbar-inverse .navbar-brand {
+	color: #f7ccff;
+	font-family: 'Dokdo', cursive;
+	font-size: 26px;
 }
