added devise gems and set it up

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,7 @@
+
+
 <% @places.each do |place| %>
+ 
   <div class="booyah-box col-10 offset-1">
     <h1><%= place.name %></h1>
     <i><%= place.address %></i><br />
@@ -6,3 +9,8 @@
   </div>
 
 <% end %>
+
+<div class="pagination justify-content-center">
+	<%= will_paginate @places %>
+</div>
+	
