--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,11 +2,13 @@
 	<h1><%= @place.name %></h1>
 	<i><%= @place.address %></i>
 	<br/><br/>
-	<p><%= @place.description %></p>
-	<div class="float-right">
-		<% if current_user && current_user == @place.user %>
-    	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-    	<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
-    <% end %>
-  </div>
+	<div class="row">
+		<p class="col-9"><%= @place.description %></p>
+		<div class="col-3 float-right">
+			<% if current_user && current_user == @place.user %>
+		  	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+		  	<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
+		  <% end %>
+  	</div>
+	</div>	
 </div>
