added comment form at the bottom of the show page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -48,8 +48,17 @@ body {
 }
 
 #map {
-	height: 300px;
-	width: 300px;
+	min-height: 250px;
 	overflow: scroll;
 	position: relative;
+}
+
+.buttons {
+	position: absolute;
+	bottom: 0;
+	right: 15px;
+}
+
+.clear {
+	clear: both;
 }
