--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,44 +3,54 @@
 	<i><%= @place.address %></i>
 	<br/><br/>
 	<div class="row">
-		<p class="col-9"><%= @place.description %></p>
-
+		<p><%= @place.description %></p>
+	</div>
+	<div class="row">
   
-  <% if @place.latitude.present? && @place.longitude.present? %>
-  
-  <script>
+	  <% if @place.latitude.present? && @place.longitude.present? %>
+		  
+		  <script>
 
-    function initMap() {
-      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+		    function initMap() {
+		      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
 
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 12,
-        center: myLatLng
-      });
+		      var map = new google.maps.Map(document.getElementById('map'), {
+		        zoom: 12,
+		        center: myLatLng
+		      });
 
-      var marker = new google.maps.Marker({
-        position: myLatLng,
-        map: map,
-        title: 'Hello World!'
-      });
-    }
-  </script>
+		      var marker = new google.maps.Marker({
+		        position: myLatLng,
+		        map: map,
+		        title: 'Hello World!'
+		      });
+		    }
+		  </script>
 
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiXPN_hrjoXQ8cVrf8UHFbo1DRI51uRds
-&callback=initMap">
-  </script>
+		  <script async defer
+		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiXPN_hrjoXQ8cVrf8UHFbo1DRI51uRds
+		&callback=initMap">
+		  </script>
 
-  <div id="map"></div>
-<% end %>
+	  	<div id="map" class="col-7"></div>
+		<% end %>
 
-<br />
+		<br />
 
-		<div class="col-3 float-right">
+		<div class="col-2 offset-3">
 			<% if current_user && current_user == @place.user %>
-		  	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-		  	<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
+				<div class="buttons">
+			  	<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+			  	<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
+		 	 	</div>
 		  <% end %>
   	</div>
 	</div>	
 </div>
+
+<div class="clear"></div>
+<%= simple_form_for @comment, url: '#' do |f| %>
+  <%= f.input :message %>
+  <%= f.input :rating %>
+  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+<% end %>
