--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -51,7 +51,7 @@
 <div class="clear"></div>
 
 
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-primary btn-lg col-2 offset-1" data-toggle="modal" data-target="#myModal">
   Add a Comment
 </button>
 
@@ -78,11 +78,20 @@
     </div>
   </div>
 </div>
+<br />
+<br />
 
-<h1>Comments</h1>
+<div class="col-10 offset-1">
+  <h1 class="float-left">Comments</h1>
+ 
+</div>
 
+<div class="clear"></div>
+<br />
+
+<div class:"row">
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-12 col-sm-6 offset-1">
     <blockquote>
       <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
@@ -92,3 +101,4 @@
     </blockquote>
   </div>
 <% end %>
+</div>
