fixed comments on root page

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,9 +10,10 @@
     <% if place.user.present? %>
     	<small><%= place.user.email %></small>
     	<% end %>
+  
 
   <% if place.comments.present? %>
-    <div class="col-12 col-sm-6">
+    <div class="col-12">
       <blockquote>
         <% if place.comments.last.humanized_rating.present? %>
           <b><%= place.comments.last.humanized_rating %></b> -
@@ -22,6 +23,7 @@
       </blockquote>
     </div>
   <% end %>
+</div>
 <% end %>
 
 
