--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -86,8 +86,8 @@ blockquote p {
 }
 
 .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
-  height: 450px;
-  width: 100%;
+  max-height: 550px;
+  //width: 100%;
 }
 
 .carousel-caption {
