--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -90,15 +90,17 @@
 <br />
 
 <div class:"row">
-<% @place.comments.each do |comment| %>
-  <div class="col-12 col-sm-6 offset-1">
-    <blockquote>
-      <% if comment.humanized_rating.present? %>
-        <b><%= comment.humanized_rating %></b> -
-      <% end %>
-      <%= comment.message %>
-      <small><%= comment.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
+	<% if @comments != "pizza" %>
+		<% @place.comments.each do |comment| %>
+		  <div class="col-12 col-sm-6 offset-1">
+		    <blockquote>
+		      <% if comment.humanized_rating.present? %>
+		        <b><%= comment.humanized_rating %></b> -
+		      <% end %>
+		      <%= comment.message %>
+		      <small><%= comment.user.email %></small>
+		    </blockquote>
+		  </div>
+		<% end %>
+	<% end %>	
 </div>
