--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
 <hi>User Dashboard</hi>
+<h1><%= @user.email %></h1>
+<h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
+<h4><%= @user.comments.count %> total comments</h4>
+<h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
+
