--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -5,6 +5,49 @@
 	<div class="row">
 		<p><%= @place.description %></p>
 	</div>
+
+<button type="button" class="btn btn-primary btn-lg col-2 offset-1" data-toggle="modal" data-target="#photoModal">
+  Add a Photo
+</button>
+
+  <div class="row">
+    <% @place.photos.each do |photo| %>
+      <div class="col-12 col-md-4 col-sm-6 text-center">
+        <a href="<%= photo.picture.url %>">
+          <img src="<%= photo.picture.url %>" class="img-thumbnail"/>
+        </a>
+        <i><%= photo.caption %></i>
+        <br />
+      </div>
+    <% end %>
+  </div>
+
+
+<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :caption %>
+          <%= f.input :picture %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a photo", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 	<div class="row">
   
 	  <% if @place.latitude.present? && @place.longitude.present? %>
